test_programs/compile_failure/noirc_frontend_tests_metaprogramming_comptime_code_rejects_dynamic_variable/src/main.nr

    fn main(x: Field) {
        comptime let my_var = (x - x) + 2;
        assert_eq(my_var, 2);
    }
    